Atomic Design: Stop zoom input on mobile devices

--- a/atomic/_old_structure/sass/styles/pages/auth/auth.scss
+++ b/atomic/_old_structure/sass/styles/pages/auth/auth.scss
@@ -73,7 +73,6 @@
             height: $auth-input-text-height;
             width: $auth-input-text-width;
             max-width: $auth-input-text-max-width;
-            font-size: $auth-input-text-font-size;
         }
     }
 
